# SocialNetwork

./: CMakeLists.txt  README.md
Assignment4/: Assignment4.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  post.cpp  post.hpp  user.cpp  user.h
include/: mainwindow.h  network.h  post.h  user.h
resources/: social_network.txt
src/: main.cpp  mainwindow.cpp  network.cpp  post.cpp  user.cpp
tests/: test_network.cpp
